# 2D-GameEngine

./: CMakeLists.txt  README.md
include/glad/: glad.h
resource/shaderFiles/: shader.frag  shader.vert
src/: glad.c  main.cpp
src/core/: application.cpp  application.h  window.cpp  window.h
src/game/: level.cpp  level.h  player.h  tile.h  world.cpp  world.h
src/graphics/: camera.h  mesh.cpp  mesh.h  meshGenerator.cpp  meshGenerator.h  renderer.cpp  renderer.h  scene.cpp  scene.h  shader.cpp  shader.h
src/utility/: utility.cpp  utility.h
